@@ -159,7 +159,11 @@ exports.traceOutgoingRequest = function (agent, moduleName, method) {
 
         const newHeaders = Object.assign({}, options.headers)
         newHeaders.traceparent = headerValue
-        newHeaders.tracestate = traceStateValue
+        if (traceStateValue) {
+          // Do not set the header to the empty string. Though RFC 7230 allows
+          // empty header values, some servers apparently do not.
+          newHeaders.tracestate = traceStateValue
+        }
         if (agent._conf.useElasticTraceparentHeader) {
           newHeaders['elastic-apm-traceparent'] = headerValue
         }
